--- a/static/index.html
+++ b/static/index.html
@@ -2,6 +2,7 @@
 <html>
 <head>
     <title></title>
+    <link href="https://fonts.googleapis.com/css2?family=Open+Sans:wght@400;600&display=swap" rel="stylesheet">
     <link rel="stylesheet" type="text/css" href="index.css">
     <script type="text/javascript" src="index.js"></script>
     <!-- Global site tag (gtag.js) - Google Analytics -->
