--- a/static/index.html
+++ b/static/index.html
@@ -2,7 +2,8 @@
 <html>
 <head>
     <title></title>
-    <link href="https://fonts.googleapis.com/css2?family=Open+Sans:wght@400;600&display=swap" rel="stylesheet">
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+    <link href="https://fonts.googleapis.com/css2?family=Open+Sans:wght@100;400;600&display=swap" rel="stylesheet">
     <link rel="stylesheet" type="text/css" href="index.css">
     <script type="text/javascript" src="index.js"></script>
     <!-- Global site tag (gtag.js) - Google Analytics -->
